Disables the context menu in User Manager's reauth dialog.

This prevents user from inspecting the contents of the dialog which causes a crash.

This CL also removes the logic where the WebContentsObserver closes the dialog automatically when the final URL is reached. The reauth dialog is closed explicitly in InlineLoginHandler::HandleDialogClose(). That logic is not needed.

BUG=608313

Review-Url: https://codereview.chromium.org/2168953002
Cr-Commit-Position: refs/heads/master@{#409311}

Former-commit-id: 181eb213602d7e36865b6cc9fcc3835c721ab994